feat: implemented states cases
