# src/controllers/states.ts
@@ -3,6 +3,7 @@ import axios from 'axios';
 import { Get, Queries, Route } from 'tsoa';
 import { INVALID_STATE_CODE } from '~/messages/errors';
 import { Meta } from './germany';
+import { Case } from './cases';
 
 export enum GermanyStates {
     'Schleswig-Holstein' = 'SH',
@@ -21,6 +22,12 @@ export enum GermanyStates {
     'Sachsen' = 'SN',
     'Sachsen-Anhalt' = 'ST',
     'Thüringen' = 'TH',
+}
+
+export interface GermanyStateCasesHistory {
+    id: number;
+    name: string;
+    history: Case[];
 }
 
 export interface GermanyStatesQueryParams {
@@ -77,7 +84,7 @@ export interface GermanyAllStatesResponse {
     };
     meta: Meta;
 }
-export interface FetchAllGermanyStatesResponse {
+export interface FetchGermanyAllStatesResponse {
     data: {
         SH: GermanyState;
         HH: GermanyState;
@@ -109,11 +116,49 @@ export interface FetchGermanyStateResponse {
     data: GermanyState;
 }
 
+export interface FetchGermanyAllStatesCasesHistoryResponse {
+    data: {
+        SH: GermanyStateCasesHistory;
+        HH: GermanyStateCasesHistory;
+        NI: GermanyStateCasesHistory;
+        HB: GermanyStateCasesHistory;
+        NW: GermanyStateCasesHistory;
+        HE: GermanyStateCasesHistory;
+        RP: GermanyStateCasesHistory;
+        BW: GermanyStateCasesHistory;
+        BY: GermanyStateCasesHistory;
+        SL: GermanyStateCasesHistory;
+        BE: GermanyStateCasesHistory;
+        BB: GermanyStateCasesHistory;
+        MV: GermanyStateCasesHistory;
+        SN: GermanyStateCasesHistory;
+        ST: GermanyStateCasesHistory;
+        TH: GermanyStateCasesHistory;
+    };
+}
+
+export interface FetchGermanyStateCasesHistoryResponse {
+    data: {
+        [state: string]: GermanyStateCasesHistory;
+    };
+}
+
+export interface GermanyAllStateCasesHistoryResponse
+    extends FetchGermanyAllStatesCasesHistoryResponse {
+    meta: Meta;
+}
+
+export interface GermanyStateCasesHistoryResponse extends FetchGermanyStateCasesHistoryResponse {
+    meta: Meta;
+}
+
 const _rkiApiUrl: string = config.get('RKI.API.LOCAL.URL');
 const _statesEndPoint: string = config.get('RKI.API.ENDPOINTS.STATES');
 const _statesApiUrl = `${_rkiApiUrl}${_statesEndPoint}`;
+const _statesCasesHistoryApiUrl: string = _statesApiUrl + '/history/cases';
+const _stateCasesHistoryApiUrl: string = _statesApiUrl + '/{{state}}/history/cases';
 
-async function fetchAllStates(): Promise<FetchAllGermanyStatesResponse> {
+async function fetchAllStates(): Promise<FetchGermanyAllStatesResponse> {
     const { data } = await axios.get<GermanyAllStatesResponse>(_statesApiUrl);
     const { data: statesData } = data;
     return {
@@ -129,22 +174,62 @@ async function fetchState(state: GermanyStates): Promise<FetchGermanyStateRespon
     };
 }
 
+async function fetchAllStatesCasesHistory(): Promise<FetchGermanyAllStatesCasesHistoryResponse> {
+    const { data } =
+        await axios.get<GermanyAllStateCasesHistoryResponse>(_statesCasesHistoryApiUrl);
+    const { data: statesData } = data;
+    return {
+        data: statesData,
+    };
+}
+
+async function fetchStateCasesHistory(
+    state: GermanyStates,
+): Promise<FetchGermanyStateCasesHistoryResponse> {
+    const { data } = await axios.get<GermanyStateCasesHistoryResponse>(
+        _stateCasesHistoryApiUrl.replace('{{state}}', state),
+    );
+    const { data: statesData } = data;
+    return {
+        data: statesData,
+    };
+}
+async function isValidState(state?: GermanyStates): Promise<boolean> {
+    return state?.length ? !Object.values(GermanyStates).includes(state as GermanyStates) : false;
+}
+
 @Route('germany/states')
 export default class GermanyStatesController {
     @Get('/')
     public async fetchStates(
         @Queries() queryParams: GermanyStatesQueryParams,
-    ): Promise<FetchAllGermanyStatesResponse | FetchGermanyStateResponse> {
+    ): Promise<FetchGermanyAllStatesResponse | FetchGermanyStateResponse> {
         const { state } = queryParams;
-        // validate state
-        if (state?.length && !Object.values(GermanyStates).includes(state as GermanyStates)) {
+
+        if (!isValidState(state)) {
             throw new Error(INVALID_STATE_CODE);
         }
-        // fetch states data if state is not provided
-        // else fetch state data by state code
+
         if (!state) {
             return fetchAllStates();
         }
         return fetchState(state);
+    }
+
+    @Get('/cases')
+    public async fetchStatesCasesHistory(
+        @Queries() queryParams: GermanyStatesQueryParams,
+    ): Promise<FetchGermanyStateCasesHistoryResponse | FetchGermanyAllStatesCasesHistoryResponse> {
+        const { state } = queryParams;
+
+        if (!isValidState(state)) {
+            throw new Error(INVALID_STATE_CODE);
+        }
+
+        if (!state) {
+            return fetchAllStatesCasesHistory();
+        }
+
+        return fetchStateCasesHistory(state);
     }
 }
